ShowRSS 5 min loop

--- a/config.yaml.template
+++ b/config.yaml.template
@@ -1,6 +1,8 @@
-BaseURL: "https://www.seedr.cc/rest"
 DlRoot: "/path"
 PidFilePath: "/path"
-CompletedFolder: 123456
+CompletedFolder: "Completed"
 Username: "username"
 Passwd: "password"
+ShowRSS: ""
+UseAPI: true
+UseFTP: false
