--- a/config.yaml.template
+++ b/config.yaml.template
@@ -1,9 +1,15 @@
+# Root of the local download folder
 DlRoot: "/path"
+# PID file temp file path
 PidFilePath: "/path"
+# Where should cache.json live?
 CachePath: ""
-CompletedFolder: "Completed"
+# Array of folders to monitor for completed downloads. Subfolders here will map to subfolders in DlRoot
+CompletedFolder: ["Completed/Kids", "Completed/NotKids"]
 Username: "username"
 Passwd: "password"
+# URL to your ShowRSS.info feed
 ShowRSS: ""
+# How we control for which download method to use
 UseAPI: true
 UseFTP: false
