--- a/config.yaml.template
+++ b/config.yaml.template
@@ -18,3 +18,5 @@ UseAPI: true
 UseFTP: false
 # Debugging option - delete from Seedr after the download finishes
 DeleteAfterDownload: true
+# Dev mode - 5 second loops
+DevMode: false
