--- a/config.yaml.template
+++ b/config.yaml.template
@@ -1,11 +1,11 @@
 # Root of the local destination folder (probably your Plex TV Shows library folder)
-DlRoot: "/path"
+DownloadDestination: "/path"
 # PID file temp file path (just a temp file - put it in $HOME, ./tmp or similar temp location)
 PidFilePath: "/path"
 # Where should cache.json live? (I use $HOME, ./tmp or similar temp location)
 # If there is an issue and you need to re-download something, you can remove that item from the cache and it will re-download again
 CachePath: "/home/username/cache.json"
-# Array of folders to monitor for completed downloads. Subfolders here will map to subfolders in DlRoot.
+# Array of folders to monitor for completed downloads. Subfolders here will map to subfolders in DownloadDestination.
 # NOTE: the first folder in this list MUST be the folder for TV Shows - autodownloading of shows picks the first item in the array
 CompletedFolders: ["Shows","Movies/Kids", "Movies/NotKids"]
 # This is your Seedr credentials - a paid account is required for API access
