--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,13 @@
 {
     "compilerOptions": {
-        "outDir": "chrome-extension/dist",
+        // "outDir": "chrome-extension/dist",
+        "outDir": "dist",
         "module": "ESNext",
         "moduleResolution": "node",
         "target": "ES6",
         "lib": ["ESNext", "DOM", "DOM.Iterable"],
         "typeRoots": ["chrome-extension/node_modules/@types"]
     },
-    "include": ["chrome-extension/**/*"]
+    "include": ["static/**/*"]
+    // "include": ["chrome-extension/**/*", "static/**/*"]
 }
